# kweepeer

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: Makefile  kweepeer.1.scd  kweepeer.5.scd
src/: api.rs  common.rs  lexer.rs  lib.rs  main.rs
src/modules/: analiticcl.rs  finalfusion.rs  fst.rs  lookup.rs  mod.rs
test/: lookup.tsv  test.freq.lexicon  test.http  test.nofreq.lexicon
