[package]
name = "kweepeer"
description = "A generic webservice for interactive query expansion, expansion is provided via various modules"
documentation = "https://docs.rs/kweepeer"
version = "0.1.1"
edition = "2021"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
include = ["src/**", "LICENSE", "README.md", "test/*","!test/int_*", "!test/nl_voc*"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/knaw-huc/kweepeer"
keywords = [ "text-processing", "query-expansion", "search" ]

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.0", features = ["macros","rt-multi-thread","signal"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features= ["trace", "normalize-path"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "vendored"] }
logos = "0.15.0"
toml = "0.8.20"
analiticcl = { version = "0.4.8", optional = true }
fst = { version = "0.4.7", features = ["levenshtein"], optional = true }
finalfusion = { version = "0.18.0", optional = true }

[features]
default = ["analiticcl","fst","finalfusion"]
analiticcl = ["dep:analiticcl"]
fst = ["dep:fst"]
finalfusion = ["dep:finalfusion"]
